--- a/css/reset.css
+++ b/css/reset.css
@@ -29,3 +29,4 @@ input{
 .bg-white-transparent-01{background: rgba(255,255,255,10%);}
 .shadow-text{text-shadow: 0px 0px 6px rgba(0,0,0,70%);}
 .fz-18{ font-size: 18px;}
+.flex-align-center{display: flex; align-items: center;}
