Agregando Tienda Online Frontend

--- a/senati/tarea1/app/views/home/index.html
+++ b/senati/tarea1/app/views/home/index.html
@@ -7,6 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="../../../public/css/reset.css">
     <link rel="stylesheet" href="../../../public/css/header.css">
+    <link rel="stylesheet" href="../../../public/css/footer.css">
     <link rel="stylesheet" href="../../../public/css/home.css">
     <link rel="icon" href="../../../public/img/siatmedia_logo.png" type="image/x-icon">
     <link rel="canonical" href="https://hunigolesan.github.io/hugo-senati/senati/tarea1/app/views/home/index.html/" />
@@ -24,10 +25,10 @@
                 <span></span><span></span><span></span>
             </label>
             <input class="navegation_checkbox" type="checkbox" name="header_responsive" id="header_responsive">
-            <div class="navegation_capa_mobile shadow-big-black">
-                <a class="navegation_link" href="#main">Inicio</a>
+            <div class="navegation_capa_mobile">
+                <a class="navegation_link" href="index.html">Inicio</a>
                 <a class="navegation_link" href="#welcome">Nosotros</a>
-                <a class="navegation_link" href="#">Tienda</a>
+                <a class="navegation_link" href="../store/tienda.html">Tienda</a>
                 <a class="navegation_link" href="#servicios">Servicios</a>
                 <a class="navegation_link" href="#">Blog</a>
                 <a class="navegation_link" href="#contacto">Contacto</a>
