--- a/senati/tarea1/public/css/header.css
+++ b/senati/tarea1/public/css/header.css
@@ -50,8 +50,8 @@ main{
 }
 
 .navegation_link {
-    color: #263240;
-    position: relative;
+    color: #263240 !important;
+    position: relative !important;
 }
 
 .navegation_link::after {
