--- a/senati/tarea1/public/css/reset.css
+++ b/senati/tarea1/public/css/reset.css
@@ -4,12 +4,12 @@
     box-sizing: border-box;
 }
 html{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
     scroll-behavior: smooth;
 }
 
 a{
-    text-decoration: none;
+    text-decoration: none !important;
     display: block;
 }
 img{
