--- a/senati/tarea1/public/css/home.css
+++ b/senati/tarea1/public/css/home.css
@@ -399,6 +399,26 @@
     color: white;
     border-bottom: 1px solid white;
 }
+.show_message{
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 4px 1rem;
+    text-align: center;
+    border-radius: 6px;
+    position: absolute;
+    width: 90%;
+}
+.show_message-error{
+    background: rgb(255, 119, 119);
+    border: 1px solid rgb(255, 73, 73);
+    color: white;
+}
+.show_message-success{
+    background: rgb(159, 255, 139);
+    border: 1px solid rgb(17, 182, 11);
+    color: rgb(34, 34, 34);
+}
 @media (width <= 1190px) {
     .welcome,
     .atencion,
