--- a/senati/tarea1/app/views/store/tienda.html
+++ b/senati/tarea1/app/views/store/tienda.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="comprar laptops, laptops para gaming, laptops para estudiantes, mejores laptops 2024, computadores de escritorio, computadores para diseño gráfico, tecnología en laptops, ofertas de laptops, accesorios para computadores, laptops de alto rendimiento, tecnología portátil, laptops ligeras, laptops para negocios, computadoras de alto rendimiento, tecnología informática, dispositivos tecnológicos, laptops económicas, análisis de laptops, laptops para programadores, laptops para trabajo remoto">
     <meta name="description" content="Explora nuestra tienda online y descubre una amplia gama de laptops y computadores. Ofertas exclusivas, envío rápido y soporte técnico especializado. ¡Compra la tecnología más avanzada hoy mismo!">
     <link rel="icon" href="../../../public/img/siatmedia_logo.png" type="image/x-icon">
-<!--     <link rel="canonical" href="https://hunigolesan.github.io/hugo-senati/senati/tarea1/app/views/home/index.html/" /> -->
+    <link rel="canonical" href="https://hunigolesan.github.io/hugo-senati/senati/tarea1/app/views/store/tienda.html" />
     <link rel="stylesheet" href="../../../public/css/reset.css">
     <link rel="stylesheet" href="../../../public/css/header.css">
     <link rel="stylesheet" href="../../../public/css/footer.css">
