--- a/senati/tarea1/app/views/home/index.html
+++ b/senati/tarea1/app/views/home/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="../../../public/img/siatmedia_logo.png" type="image/x-icon">
     <link rel="canonical" href="https://hunigolesan.github.io/hugo-senati/senati/tarea1/app/views/home/index.html" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <meta name="google-site-verification" content="M0_CNYP0A-Kg5GfOWR_KM2S7cE_GO8izXzSIrVFVwmA" />
+    <!-- <meta name="google-site-verification" content="M0_CNYP0A-Kg5GfOWR_KM2S7cE_GO8izXzSIrVFVwmA" /> -->
 </head>
 
 <body>
